将ed项目改装为react + ts

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TT2",
+  "name": "TT2 工具集",
   "icons": [
     {
       "src": "favicon.ico",
