--- a/projects/tt2/public/manifest.json
+++ b/projects/tt2/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "TT2",
+  "name": "TT2 工具集",
   "icons": [
     {
       "src": "favicon.ico",
