--- a/projects/tt2/package.json
+++ b/projects/tt2/package.json
@@ -8,6 +8,8 @@
     "@types/react": "16.8.17",
     "@types/react-dom": "16.8.4",
     "@types/react-router-dom": "^4.3.3",
+    "mobx": "^5.9.4",
+    "mobx-react": "^6.0.0",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
