--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,22 @@
   "name": "TT2 工具集",
   "icons": [
     {
+      "src": "/icon-192",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/icon-512",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 48x48 32x32 24x24 16x16",
       "type": "image/x-icon"
-    },
-    {
-      "src": "1.jpg",
-      "sizes": "144x144",
-      "type": "image/jpeg"
     }
   ],
-  "start_url": "./welcome.html",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color": "#ffffff"
